@@ -2,6 +2,7 @@ Revision history for MooseX-Extreme
 
 {{$NEXT}}
 
+          - Trial support for `clone => 1`
           - Roles will now warn if a class overrides a role method without
             excluding it (in Moose, the class silently ignores the role method)
           - Add shortcuts for writer, clearer, builder, predicate
